--- a/slyzestyle.css
+++ b/slyzestyle.css
@@ -101,6 +101,7 @@
 
         button {
             padding: 1px 2px;
+            height: 35px;
             background-color: #007BFF;
             /* Blue button color */
             color: #fff;
